# localface-studio

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml
docs/: ACCEPTANCE_CRITERIA.md  DEVELOPMENT.md  LICENSE_INVENTORY.md  PRIVACY_THREAT_MODEL.md  PRODUCT_REQUIREMENTS.md  PROJECT_PLAN.md
docs/architecture/: ADR-001-hybrid-backend.md  ADR-002-toolchain-and-layout.md
docs/progress/: phase-00.md  phase-01.md  phase-02.md
docs/research/: LEGACY_PROJECT_REVIEW.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  LocalResultGallery.tsx  PhotoPicker.tsx  ResultPreview.tsx  api.ts  index.css
scripts/: bootstrap.ps1  check.ps1  run_dev.py  scan_public_repo.py  start.ps1  verify_backend.py  verify_frontend.py
src/localface_studio/: __init__.py  main.py
src/localface_studio/api/: app.py  security.py
src/localface_studio/api/routes/: health.py  session.py  tasks.py
src/localface_studio/application/: sessions.py  task_cleanup.py  task_creation.py  task_queue.py  task_repository.py  uploads.py
src/localface_studio/backends/: __init__.py  simulation.py
src/localface_studio/domain/: __init__.py  images.py  tasks.py
src/localface_studio/infrastructure/: __init__.py  config.py  image_validation.py  logging.py  sqlite_tasks.py  task_workspaces.py
tests/: __init__.py  test_config.py  test_health.py  test_logging.py  test_security.py  test_sessions.py  test_simulation_backend.py  test_sqlite_tasks.py  test_task_api.py  test_task_cleanup.py  test_task_control_api.py  test_task_queue.py  test_tasks.py  test_uploads.py
