[project]
name = "localface-studio"
version = "0.1.0"
description = "Privacy-first local face-swapping studio"
readme = "README.md"
requires-python = "==3.14.*"
authors = [
    { name = "Wenqi Zhang" },
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/localface_studio"]
