[project]
name = "localface-studio"
version = "0.1.0"
description = "Privacy-first local face-swapping studio"
readme = "README.md"
requires-python = "==3.14.*"
authors = [
    { name = "Wenqi Zhang" },
]
dependencies = [
    "fastapi>=0.139.2",
    "uvicorn>=0.51.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/localface_studio"]
