[project]
name = "localface-studio"
version = "0.1.0"
description = "Privacy-first local face-swapping studio"
readme = "README.md"
requires-python = "==3.14.*"
authors = [
    { name = "Wenqi Zhang" },
]
dependencies = [
    "fastapi>=0.139.2",
    "pydantic-settings>=2.14.2",
    "uvicorn>=0.51.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/localface_studio"]

[dependency-groups]
dev = [
    "hatchling>=1.31.0",
    "httpx>=0.28.1",
    "mypy>=2.3.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.22",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--strict-config", "--strict-markers"]

[tool.coverage.run]
branch = true
source = ["localface_studio"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = true

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["B", "E", "F", "I", "RUF", "SIM", "UP"]

[tool.mypy]
python_version = "3.14"
strict = true
files = ["src", "scripts", "tests"]
